Wed Apr  1 14:28:11 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
        * tests/Sequence_Unit_Tests/unbounded_sequence_cdr_ut.cpp:
        * tests/Sequence_Unit_Tests/bounded_value_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/bounded_object_reference_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_object_reference_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
        * tests/Sequence_Unit_Tests/run_test.pl:
        * tests/Sequence_Unit_Tests/object_reference_sequence_element_ut.cpp:
        * tests/Sequence_Unit_Tests/testing_counters.hpp:
        * tests/Sequence_Unit_Tests/bounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_nocopy_ut.cpp:
        * tests/Sequence_Unit_Tests/bounded_sequence_cdr_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/testing_allocation_traits.hpp:
        * tests/Sequence_Unit_Tests/string_sequence_element_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_value_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/testing_allocation_traits_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:
        * tests/Sequence_Unit_Tests/unbounded_fwd_object_reference_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/Makefile.am:

          Updated the test with respect to all recent changes in the
          implementation of sequences in TAO. This fixes bug#3488.

        * tao/Unbounded_Octet_Sequence_T.h:
        * tao/Generic_Sequence_T.h:

          Fixed several things. 1) In copy constructor. When a new
          sequence is created from a sequence that has buffer_==0
          there is no need to allocate a buffer in a new sequence.
          Also if the original sequence has length_<maximum_ then we